@@ -580,15 +580,56 @@ static PreferenceDialogItem appearance_items[] = {
 	  0
 	},
 	{ N_("Fonts"),
+	  NAUTILUS_PREFERENCES_ICON_VIEW_FONT,
+	  N_("Font for Icon view:"),
+	  NAUTILUS_PREFERENCE_ITEM_FONT,
+	  NAUTILUS_PREFERENCES_SMOOTH_GRAPHICS_MODE,
+	  NAUTILUS_PREFERENCE_ITEM_HIDE
+	},
+	{ N_("Fonts"),
+	  NAUTILUS_PREFERENCES_ICON_VIEW_SMOOTH_FONT,
+	  N_("Font for Icon view:"),
+	  NAUTILUS_PREFERENCE_ITEM_SMOOTH_FONT,
+	  NAUTILUS_PREFERENCES_SMOOTH_GRAPHICS_MODE,
+	  NAUTILUS_PREFERENCE_ITEM_SHOW
+	},
+	{ N_("Fonts"),
+	  NAUTILUS_PREFERENCES_ICON_VIEW_STANDARD_FONT_SIZE,
+	  N_("Font size for Icon view at 100% zoom:"),
+	  NAUTILUS_PREFERENCE_ITEM_CONSTRAINED_INTEGER,
+	  NULL,
+	  0,
+	  NULL,
+	  "8,10,12,14,16,18,20,22,24",
+	  "8,10,12,14,16,18,20,22,24",
+	},
+	{ N_("Fonts"),
+	  NAUTILUS_PREFERENCES_LIST_VIEW_FONT,
+	  N_("Font for List view:"),
+	  NAUTILUS_PREFERENCE_ITEM_FONT,
+	  NULL,
+	  0
+	},
+	{ N_("Fonts"),
+	  NAUTILUS_PREFERENCES_LIST_VIEW_STANDARD_FONT_SIZE,
+	  N_("Font size for List view at 100% zoom:"),
+	  NAUTILUS_PREFERENCE_ITEM_CONSTRAINED_INTEGER,
+	  NULL,
+	  0,
+	  NULL,
+	  "8,10,12,14,16,18,20,22,24",
+	  "8,10,12,14,16,18,20,22,24",
+	},
+	{ N_("Fonts"),
 	  NAUTILUS_PREFERENCES_DEFAULT_FONT,
-	  N_("Use this font in Sidebar and some dialog boxes:"),
+	  N_("Font for elsewhere in Nautilus:"),
 	  NAUTILUS_PREFERENCE_ITEM_FONT,
 	  NAUTILUS_PREFERENCES_SMOOTH_GRAPHICS_MODE,
 	  NAUTILUS_PREFERENCE_ITEM_HIDE
 	},
 	{ N_("Fonts"),
 	  NAUTILUS_PREFERENCES_DEFAULT_SMOOTH_FONT,
-	  N_("Use this font in Sidebar and some dialog boxes:"),
+	  N_("Font for elsewhere in Nautilus:"),
 	  NAUTILUS_PREFERENCE_ITEM_SMOOTH_FONT,
 	  NAUTILUS_PREFERENCES_SMOOTH_GRAPHICS_MODE,
 	  NAUTILUS_PREFERENCE_ITEM_SHOW
@@ -696,47 +737,6 @@ static EnumerationEntry executable_text_activation_enumeration[] = {
 };
 
 static PreferenceDialogItem directory_views_items[] = {
-	{ N_("Fonts"),
-	  NAUTILUS_PREFERENCES_ICON_VIEW_FONT,
-	  N_("Use this font in Icon view:"),
-	  NAUTILUS_PREFERENCE_ITEM_FONT,
-	  NAUTILUS_PREFERENCES_SMOOTH_GRAPHICS_MODE,
-	  NAUTILUS_PREFERENCE_ITEM_HIDE
-	},
-	{ N_("Fonts"),
-	  NAUTILUS_PREFERENCES_ICON_VIEW_SMOOTH_FONT,
-	  N_("Use this font in Icon view:"),
-	  NAUTILUS_PREFERENCE_ITEM_SMOOTH_FONT,
-	  NAUTILUS_PREFERENCES_SMOOTH_GRAPHICS_MODE,
-	  NAUTILUS_PREFERENCE_ITEM_SHOW
-	},
-	{ N_("Fonts"),
-	  NAUTILUS_PREFERENCES_ICON_VIEW_STANDARD_FONT_SIZE,
-	  N_("Use this font size in Icon view at 100% zoom"),
-	  NAUTILUS_PREFERENCE_ITEM_CONSTRAINED_INTEGER,
-	  NULL,
-	  0,
-	  NULL,
-	  "8,10,12,14,16,18,20,22,24",
-	  "8,10,12,14,16,18,20,22,24",
-	},
-	{ N_("Fonts"),
-	  NAUTILUS_PREFERENCES_LIST_VIEW_FONT,
-	  N_("Use this font in List view:"),
-	  NAUTILUS_PREFERENCE_ITEM_FONT,
-	  NULL,
-	  0
-	},
-	{ N_("Fonts"),
-	  NAUTILUS_PREFERENCES_LIST_VIEW_STANDARD_FONT_SIZE,
-	  N_("Use this font size in List view at 100% zoom"),
-	  NAUTILUS_PREFERENCE_ITEM_CONSTRAINED_INTEGER,
-	  NULL,
-	  0,
-	  NULL,
-	  "8,10,12,14,16,18,20,22,24",
-	  "8,10,12,14,16,18,20,22,24",
-	},
 	{ N_("Click Behavior"),
 	  NAUTILUS_PREFERENCES_CLICK_POLICY,
 	  N_("Click Behavior"),
