@@ -2,6 +2,15 @@
 
 	reviewed by: Darin Adler <darin@eazel.com>
 
+	* libnautilus-extensions/nautilus-global-preferences.c:
+	Moved the font preferences from the Icon & List Views
+	pane into the Appearance pane, and tweaked the wording.
+	It was too weird having the font choices in two places.
+
+2001-04-02  John Sullivan  <sullivan@eazel.com>
+
+	reviewed by: Darin Adler <darin@eazel.com>
+
 	Fixed bug 7918 (Preferences window wider than it needs to be)
 	This also fixes the bug where the HTTP Host text field was
 	a little shorter than the HTTP Location text field.
